--- a/comunicaciones.html
+++ b/comunicaciones.html
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <a href="index.html">
                 <img
                   src="./images/Logotipo Genesys Horizontal.png"
-                  alt="Logo Genesys Informatica"
+                  alt="Logo Genesys Informática"
                   height="55"
                 />
               </a>
@@ -153,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h4 class="mb-2">Servicios Administrados de Redes</h4>
                 <h3>Switching y Routing</h3>
                 <ul class="instalaciones-servicios-ul ml-4 mt-2">
-                  <li>Revision de tu Red Fisica</li>
+                  <li>Revision de tu Red Física</li>
                   <li>Diseño e Implementación</li>
                   <li>Administración y Monitoreo</li>
                   <li>Soporte y Mantenimiento</li>
@@ -201,7 +201,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <ul class="instalaciones-servicios-ul ml-4 mt-2">
                   <li>Salas de Videoconferencias</li>
                   <li>Soluciones de Audio y Video</li>
-                  <li>Comunicación Interna a travez de Señalizacion Digital</li>
+                  <li>Comunicación Interna a través de Señalización Digital</li>
                 </ul>
               </div>
             </div>
@@ -227,12 +227,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </div>
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
-                <h4 class="mb-2">Comunicacion Unificada atravez de</h4>
+                <h4 class="mb-2">Comunicación Unificada a través de</h4>
                 <h3>Microsoft Productivity</h3>
                 <ul class="instalaciones-servicios-ul ml-4 mt-2">
                   <li>Adopción y gestión del cambio para Office 365</li>
                   <li>
-                    Phone System 365 - Colaboracion desde cualquier dispositivo
+                    Phone System 365 - Colaboración desde cualquier dispositivo
                     y cualquier plataforma
                   </li>
                   <li>Microsoft Smart Rooms</li>
@@ -246,7 +246,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
 
     <!--/newsletter-->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
@@ -288,7 +288,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     class="form-control form-group-email"
                     type="text"
                     name="email"
-                    placeholder="Correo Electronico"
+                    placeholder="Correo Electrónico"
                   />
                   <input
                     class="form-control"
