--- a/impresion.html
+++ b/impresion.html
@@ -55,7 +55,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <a href="index.html">
                 <img
                   src="./images/Logotipo Genesys Horizontal.png"
-                  alt="Logo Genesys Informatica"
+                  alt="Logo Genesys Informática"
                   height="55"
                 />
               </a>
@@ -200,7 +200,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <h5 class="card-title text-uppercase my-3">Experiencia</h5>
                   <p class="card-text">
                     En Servicios Administrados desde 2009 en diferentes
-                    modalidades, con clientes diversos y dispersion geografica.
+                    modalidades, con clientes diversos y dispersion geográfica.
                   </p>
                 </div>
               </div>
@@ -222,7 +222,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <i class="fas fa-handshake mb-2"></i>
                   <h5 class="card-title text-uppercase my-3">Compromiso</h5>
                   <p class="card-text">
-                    de Genesys de asesorar y acompañarlos en su evolucion de sus
+                    de Genesys de asesorar y acompañarlos en su evolución de sus
                     procesos de negocio con soporte de las impresoras
                     Multifuncionales en el manejo de documentos.
                   </p>
@@ -240,10 +240,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <i class="fas fa-project-diagram mb-2"></i>
                   <h5 class="card-title text-uppercase my-3">Plan</h5>
                   <p class="card-text">
-                    De implementacion de implementacion de las soluciones de
-                    impresion con el objetivo de hacer eficientes los procesos
-                    de impresion, copiado, y digitalizacion de documentos
-                    reduciento costos en el tiempo, sin sacrificar calidad y
+                    De implementación de implementación de las soluciones de
+                    impresión con el objetivo de hacer eficientes los procesos
+                    de impresión, copiado, y digitalización de documentos
+                    reduciendo costos en el tiempo, sin sacrificar calidad y
                     eficiencia.
                   </p>
                 </div>
@@ -255,7 +255,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <i class="fas fa-user-lock mb-2"></i>
                   <h5 class="card-title text-uppercase my-3">Seguridad</h5>
                   <p class="card-text">
-                    En la continuidad de la operacion de las empresas, a traves
+                    En la continuidad de la operación de las empresas, a través
                     de equipos adicionales de respaldo y cobertura en sitio de
                     Centros Autorizados de Servicio (CAS) de LEXMARK.
                   </p>
@@ -384,7 +384,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       </div>
     </section>
     <!--/newsletter-->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
@@ -408,7 +408,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                   <form action="#" method="post">
                       <div class="form-group d-flex">
@@ -426,7 +426,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     class="form-control form-group-email"
                     type="text"
                     name="email"
-                    placeholder="Correo Electronico"
+                    placeholder="Correo Electrónico"
                   />
                   <input
                     class="form-control"
