--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica</title>
+    <title>Genesys Informática</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
@@ -68,7 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <a href="index.html">
                 <img
                   src="./images/Logotipo Genesys Horizontal.png"
-                  alt="Logo Genesys Informatica"
+                  alt="Logo Genesys Informática"
                   height="55"
                 />
               </a>
@@ -160,7 +160,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <h4 class="text-uppercase">
             Intelligenc<span style="color: #5482ab">E</span>volved
           </h4>
-          <h3>Experiencia en Soluciones Tecnologicas</h3>
+          <h3>Experiencia en Soluciones Tecnológicas</h3>
 
           <div class="banner-high-lights text-center">
             <!--
@@ -191,11 +191,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="row middle-grids pt-lg-5">
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
-                <h4 class="mb-2">Consultoria IT</h4>
+                <h4 class="mb-2">Consultoría IT</h4>
                 <h3>Amplia variedad de Servicios</h3>
                 <p class="mt-2">
                   Hoy en día en muchas empresas solo buscan el comercializar
-                  productos y subcontratan a un tercero para dar el servicio.
+                  productos y sub-contratan a un tercero para dar el servicio.
                   Genesys Informática comprometido con el Valor agregado, cuenta
                   con una gran base de técnicos especializados y certificados
                   para brindar un servicio especializado y directo para el gran
@@ -240,7 +240,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-6 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Preventivo y Reactivo</h4>
-                <h3>Soporte Tecnico Elite</h3>
+                <h3>Soporte Técnico Elite</h3>
                 <p class="mt-2">
                   En nosotros encontraras un aliado para solucionar y prevenir
                   incidentes, teniendo una base de técnicos capaces y preparados
@@ -340,12 +340,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     Solo para agradecerles por su profesionalismo y compromiso
                     con este cambio, nos da gusto contar con ustedes como socios
                     para dar este servicio. <br /><br />
-                    <i> Sobre migracion a nuevos servidores Power </i>
+                    <i> Sobre migración a nuevos servidores Power </i>
                   </p>
                 </div>
                 <div class="feedback-grids">
                   <div class="feedback-img-info">
-                    <h5>Fernando Enriquez</h5>
+                    <h5>Fernando Enríquez</h5>
                     <p>CIO, Cuprum</p>
                   </div>
                   <div class="feedback-img">
@@ -519,7 +519,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h4 class="mb-3 mt-3 text-white">Feel Free to Contact Our Agents Directly</h4>
               -->
               <h4 class="mb-3 mt-3 text-white">
-                Contacta a Nuestros Asesores Tecnicos
+                Contacta a Nuestros Asesores Técnicos
               </h4>
               <!--
                 <p class="text-white">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
@@ -532,7 +532,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 soluciones que manejamos.
               </p>
               <a href="#footer" class="scroll btn btn-primary mt-3"
-                >Contactanos</a
+                >Contáctanos</a
               >
             </div>
           </div>
@@ -621,12 +621,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
     <!-- // socios comerciales -->
     <!-- /newsletter -->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villarreal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
@@ -645,7 +645,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                 <form action="#" method="post">
                     <div class="form-group d-flex">
@@ -663,7 +663,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     class="form-control form-group-email"
                     type="text"
                     name="email"
-                    placeholder="Correo Electronico"
+                    placeholder="Correo Electrónico"
                   />
                   <input
                     class="form-control"
