--- a/infraestructura.html
+++ b/infraestructura.html
@@ -174,7 +174,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h3>Infraestructura</h3>
                 <hr />
                 <p class="mt-2 infr-text">
-                  Basados en las tecnologias de punta del mercado que nos
+                  Basados en las tecnologías de punta del mercado que nos
                   permiten ofrecer soluciones enfocadas a contribuir con la
                   optimización de las operaciones de nuestros clientes,
                   ofreciendo servicios de Venta de equipos, servicios de
@@ -182,8 +182,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   dimensionamiento de infraestructura central, consolidación y
                   virtualización de servicios (aplicaciones) en diferentes
                   plataformas operativas. Desde la venta de soluciones para su
-                  implementacion en sitio como los servicios de intergracion de
-                  nubes publicas, hibridas, y privadas a la infraestructura de
+                  implementación en sitio como los servicios de integración de
+                  nubes publicas, híbridas, y privadas a la infraestructura de
                   nuestros clientes.
                 </p>
               </div>
@@ -238,11 +238,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   Dell
                 </li>
                 <li class="text-white">
-                  Hyperconvergencia: Nutanix en POWER e Intel x86 (Lenovo y
+                  Hiperconvergencia: Nutanix en POWER e Intel x86 (Lenovo y
                   Huawei). VMware vSan en plataforma x86.
                 </li>
                 <li class="text-white">
-                  Virtualizacion y consolidacion: VMware en plataforma x86.
+                  Virtualización y consolidación: VMware en plataforma x86.
                   Power VM en IBM Power Systems. KVM en Power y x86. zVM en
                   LinuxOne.
                 </li>
@@ -304,7 +304,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <!-- <h4 class="mb-2">SAI</h4> -->
               <h3>Almacenamiento</h3>
               <hr />
-              <h4>All Flash e Hibridas</h4>
+              <h4>All Flash e Híbridas</h4>
               <!-- <p class="mt-2">
                       Basados en tecnología IBM y Lenovo, ofrecemos soluciones enfocadas a contribuir con la optimización de
                       las operaciones de nuestros clientes, ofreciendo servicios de Venta de equipos, servicios de asesoría y
@@ -430,7 +430,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </p>
                 <p class="mt-2 pers-computing-p">
                   Con servicios de carga de imagen y envió en toda la república
-                  y Centro de servicio Genesys te respalda para eficientar tu
+                  y Centro de servicio Genesys te respalda para optimizar tu
                   proceso de renovación de computo. También facilitando
                   propuestas de arrendamiento y financiamiento.
                 </p>
@@ -459,12 +459,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //Personal Computing -->
 
     <!--/newsletter-->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
             <div class="col-lg-3 col-md-6 social-info text-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Informacion</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Información</h3>
               <p>Dr Angel Martinez Villarreal #433</p>
               <p class="my-2">Monterrey, NL, Mexico</p>
               <p class="phone my-2">phone: +1 81 8347 7640</p>
@@ -483,7 +483,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </p> -->
             </div>
             <div class="col-lg-6 col-md-12 n-right tex-left">
-              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contactanos</h3>
+              <h3 class="tittle1 foot mb-md-5 mb-4 text-white">Contáctanos</h3>
               <!--
                   <form action="#" method="post">
                       <div class="form-group d-flex">
@@ -501,7 +501,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     class="form-control form-group-email"
                     type="text"
                     name="email"
-                    placeholder="Correo Electronico"
+                    placeholder="Correo Electrónico"
                   />
                   <input
                     class="form-control"
@@ -544,7 +544,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           </p>
         </div>
         <div class="col-md-4">
-          <ul class="social-icons scial justify-content-end">
+          <ul class="social-icons social justify-content-end">
             <li class="mr-1"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
             <li class="mx-1"><a href="#"><span class="fab fa-twitter"></span></a></li>
             <li class="mx-1"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
@@ -588,7 +588,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </script>
     <!-- //dropdown nav -->
 
-    <!--/ start-smoth-scrolling -->
+    <!--/ start-smooth-scrolling -->
     <script src="js/move-top.js"></script>
     <script src="js/easing.js"></script>
     <script>
@@ -620,7 +620,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         });
       });
     </script>
-    <!--// end-smoth-scrolling -->
+    <!--// end-smooth-scrolling -->
     <!-- /js -->
     <script src="js/bootstrap.js"></script>
     <!-- //js -->
