--- a/instalaciones.html
+++ b/instalaciones.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica | Hardware</title>
+    <title>Genesys Informática | Hardware</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
@@ -155,7 +155,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <div class="card">
                 <div class="card-body">
                   <i class="fas fa-cogs mb-2"></i>
-                  <h5 class="card-title text-uppercase my-3">Ingenieria</h5>
+                  <h5 class="card-title text-uppercase my-3">Ingeniería</h5>
                   <p class="card-text">
                     Para satisfacer sus necesidades somos integradores de
                     sistemas y equipos de marcas reconocidas en el mercado como:
@@ -173,10 +173,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <p class="card-text">
                     Somos una empresa de servicio que brinda a nuestros clientes
                     soluciones integrales consistentes en estudios de
-                    factibilidad, asesor&iacute;a, dise&ntilde;o y
-                    construcci&oacute;n de centros de c&oacute;mputo y
-                    telecomunicaciones. Suministramos bajo la modalidad "LLAVE
-                    EN MANO".
+                    factibilidad, asesoría, diseño y construcción de centros de
+                    cómputo y telecomunicaciones. Suministramos bajo la
+                    modalidad "LLAVE EN MANO".
                   </p>
                 </div>
               </div>
@@ -187,10 +186,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <i class="fas fa-wrench mb-2"></i>
                   <h5 class="card-title text-uppercase my-3">Mantenimiento</h5>
                   <p class="card-text">
-                    Contamos con 14 recursos t&eacute;cnicos directos en
-                    Monterrey altamente calificados para prestar nuestros
-                    servicios desde la concepci&oacute;n de la soluci&oacute;n
-                    hasta el mantenimiento preventivo y correctivo 24 horas.
+                    Contamos con 14 recursos técnicos directos en Monterrey
+                    altamente calificados para prestar nuestros servicios desde
+                    la concepción de la solución hasta el mantenimiento
+                    preventivo y correctivo 24 horas.
                   </p>
                 </div>
               </div>
@@ -212,18 +211,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-8 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Data Centers</h4>
-                <h3 class="mb-2">Centros de C&oacute;mputo.</h3>
+                <h3 class="mb-2">Centros de Cómputo.</h3>
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
                 <div class="row ml-2">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
-                      <li>Construcci&oacute;n de Centros de C&oacute;mputo.</li>
+                      <li>Construcción de Centros de Cómputo.</li>
                       <li>Cableado Estructurado.</li>
                       <li>Aire Acondicionado.</li>
-                      <li>UPS&acute;s. y Planta de Emergencia.</li>
-                      <li>Segruidad F&iacute;sica y L&oacute;gica.</li>
+                      <li>UPS's. y Planta de Emergencia.</li>
+                      <li>Seguridad Física y Lógica.</li>
                     </ul>
                   </div>
                   <div class="col-lg-6">
@@ -232,7 +231,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                       <li>Sistema Contra Incendio.</li>
                       <li>CCTV.</li>
                       <li>Contratos de Mantenimiento.</li>
-                      <li>Servicios de Migraci&oacute;n</li>
+                      <li>Servicios de Migración</li>
                     </ul>
                   </div>
                 </div>
@@ -271,23 +270,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="row ml-2">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
-                      <li>
-                        Cableado estructurado categor&iacute;as 5e, 6, 6A.
-                      </li>
+                      <li>Cableado estructurado categorías 5e, 6, 6A.</li>
                       <li>
                         Marcas: Systimax, Ortronics, Panduit, entre otros.
                       </li>
                       <li>
-                        Integraci&oacute;n voz, datos, videos y servicios de
-                        automatizaci&oacute;n de edificios.
+                        Integración voz, datos, videos y servicios de
+                        automatización de edificios.
                       </li>
                     </ul>
                   </div>
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
-                      <li>Garant&iacute;a de 15 a&ntilde;os.</li>
-                      <li>Certificaci&oacute;n y Memoria T&eacute;cnica.</li>
-                      <li>Capacitaci&oacute;n y Soporte.</li>
+                      <li>Garantía de 15 años.</li>
+                      <li>Certificación y Memoria Técnica.</li>
+                      <li>Capacitación y Soporte.</li>
                     </ul>
                   </div>
                 </div>
@@ -300,23 +297,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-8 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Data Centers</h4>
-                <h3 class="mb-2">Aire Acondicionado de Precisi&oacute;n.</h3>
+                <h3 class="mb-2">Aire Acondicionado de Precisión.</h3>
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
                 <div class="row">
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
-                      <li>Venta, Instalaci&oacute;n y Mantenimiento.</li>
-                      <li>C&aacute;lculo de cargas t&eacute;rmicas.</li>
-                      <li>An&aacute;lisis de distribuci&oacute;n de aire.</li>
-                      <li>C&aacute;mara plena.</li>
+                      <li>Venta, Instalación y Mantenimiento.</li>
+                      <li>Cálculo de cargas térmicas.</li>
+                      <li>Análisis de distribución de aire.</li>
+                      <li>Cámara plena.</li>
                     </ul>
                   </div>
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
-                      <li>Instalaci&oacute;n el&eacute;ctrica.</li>
-                      <li>Instalaci&oacute;n hidr&aacute;ulica.</li>
+                      <li>Instalación eléctrica.</li>
+                      <li>Instalación hidráulica.</li>
                       <li>Mantenimiento Preventivo y Correctivo.</li>
                     </ul>
                   </div>
@@ -342,14 +339,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <img
                   src="images/unifilar3.jpg"
                   class="img-fluid"
-                  alt="circuito eletrico"
+                  alt="circuito eléctrico"
                 />
               </div>
             </div>
             <div class="col-lg-8 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Data Centers</h4>
-                <h3 class="mb-2">Sistemas El&eacute;ctricos</h3>
+                <h3 class="mb-2">Sistemas Eléctricos</h3>
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                           at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                           in, egestas vestibulum tellus.</p> -->
@@ -357,19 +354,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>UPS.</li>
-                      <li>Venta de bater&iacute;as</li>
+                      <li>Venta de baterías</li>
                       <li>Planta de Emergencia.</li>
-                      <li>
-                        Instalaciones El&eacute;ctricas para equipo de
-                        c&oacute;mputo.
-                      </li>
+                      <li>Instalaciones Eléctricas para equipo de cómputo.</li>
                     </ul>
                   </div>
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
-                      <li>Estudios de Calidad de Energ&iacute;a.</li>
-                      <li>Estudios de Tierras F&iacute;sicas.</li>
-                      <li>Poliza de Mantenimiento.</li>
+                      <li>Estudios de Calidad de Energía.</li>
+                      <li>Estudios de Tierras Físicas.</li>
+                      <li>Póliza de Mantenimiento.</li>
                       <li>
                         Marcas: ZIGOR, LIEBERT, MITSUBISHI en plantas
                         OTTOMOTORES.
@@ -394,20 +388,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>Sistemas de Control de Acceso.</li>
-                      <li>Circuito Cerrado de Televisi&oacute;n.</li>
+                      <li>Circuito Cerrado de Televisión.</li>
                       <li>
-                        Sistemas de Detecci&oacute;n y Extinci&oacute;n de
-                        Incendios v&iacute;a FM200.
+                        Sistemas de Detección y Extinción de Incendios vía
+                        FM200.
                       </li>
                       <li>Sistemas de seguridad comercial y bancaria.</li>
-                      <li>Integraci&oacute;n con Seproban.</li>
+                      <li>Integración con Seproban.</li>
                     </ul>
                   </div>
                   <div class="col-lg-6">
                     <ul class="instalaciones-servicios-ul">
                       <li>
-                        Integraci&oacute;n voz, datos, videos y servicios de
-                        automatizaci&oacute;n de edificios.
+                        Integración voz, datos, videos y servicios de
+                        automatización de edificios.
                       </li>
                       <li>
                         Centros de monitoreo de video y central de alarmas.
@@ -444,7 +438,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="col-lg-8 advantage-grid-info pt-md-5">
               <div class="advantage_left">
                 <h4 class="mb-2">Data Centers</h4>
-                <h3 class="mb-2">Energ&iacute;a renovable</h3>
+                <h3 class="mb-2">Energía renovable</h3>
                 <!-- <p class="mt-2">Nulla pellentesque mi non laoreet eleifend. Integer porttitor mollisar lorem,
                 at molestie arcu pulvinar ut. Proin ac fermentum est. Cras mi ipsum, consectetur ac ipsum
                 in, egestas vestibulum tellus.</p> -->
@@ -453,7 +447,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <ul class="instalaciones-servicios-ul">
                       <li>
                         Sistemas Fotovoltaicos Comercial/Industrial con
-                        Interconexi&oacute;n a la Red de CFE.
+                        Interconexión a la Red de CFE.
                       </li>
                       <li>Sistemas Fotovoltaicos Aislados.</li>
                     </ul>
@@ -462,7 +456,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <ul class="instalaciones-servicios-ul">
                       <li>Módulos Fotovoltaicos.</li>
                       <li>Inversores (Monofásicos, Trifásicos e Híbridos).</li>
-                      <li>Bater&iacute;as Recargables</li>
+                      <li>Baterías Recargables</li>
                     </ul>
                   </div>
                 </div>
@@ -474,7 +468,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
 
     <!--/newsletter-->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
