--- a/vmware.html
+++ b/vmware.html
@@ -285,7 +285,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         Análisis para optimización-consolidación de ambientes
                         virtuales (VOA)
                       </li>
-                      <li>Seguridad F&iacute;sica y L&oacute;gica.</li>
+                      <li>Seguridad Física y Lógica.</li>
                     </ul>
                   </div>
                   <div class="col-lg-6">
@@ -299,7 +299,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         y/o diseño de arquitecturas virtuales.
                       </li>
                       <li>Contratos de Mantenimiento.</li>
-                      <li>Servicios de Migraci&oacute;n</li>
+                      <li>Servicios de Migración</li>
                     </ul>
                   </div>
                 </div>
@@ -321,7 +321,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //HA y DR y servicios de vmware -->
 
     <!--/newsletter-->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
