--- a/aix.html
+++ b/aix.html
@@ -151,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </section>
 
     <!--/newsletter-->
-    <footer class="newsletter_right pymd-5 py-4" id="footer">
+    <footer class="newsletter_right py-md-5 py-4" id="footer">
       <div class="container">
         <div class="inner-sec py-md-5 py-3">
           <div class="row mb-md-4 mb-md-3">
