--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Genesys Informatica | Servicios</title>
+    <title>Genesys Informática | Servicios</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta
@@ -58,7 +58,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <a href="index.html">
                 <img
                   src="./images/Logotipo Genesys Horizontal.png"
-                  alt="Logo Genesys Informatica"
+                  alt="Logo Genesys Informática"
                   height="55"
                 />
               </a>
@@ -156,7 +156,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <div class="card">
                 <div class="card-body">
                   <i class="fas fa-print mb-4"></i>
-                  <h5 class="card-title">Impresion</h5>
+                  <h5 class="card-title">Impresión</h5>
                   <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                   <a
                     href="impresion.html"
@@ -172,7 +172,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="card-body">
                   <i class="fas fa-building mb-4"></i>
                   <h5 class="card-title">
-                    Instalaciones Fisicas de Data Centers
+                    Instalaciones Físicas de Data Centers
                   </h5>
                   <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                   <a
@@ -188,7 +188,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <div class="card">
                 <div class="card-body">
                   <i class="fas fa-server mb-4"></i>
-                  <h5 class="card-title">Vmware</h5>
+                  <h5 class="card-title">VMware</h5>
                   <!-- <p class="card-text">Lorem ipsum dolor sit amet consectetur elit,Adipisicing elit tempor.</p> -->
                   <a
                     href="vmware.html"
